--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 TokyoPowerHeartModoki - Yet another TokyoPowerHeart for Mac OS X.
 Copyright (C) 2011 oraccha
 
+This program is strongly inspired by @qurihara's TokyoPowerHeart (http://sites.google.com/site/tokyopowerheart/).
+It uses TEPCO power usage REST API (http://tepco-usage-api.appspot.com/).
